--- a/styles.css
+++ b/styles.css
@@ -1,136 +1,20 @@
-@import url("https://fonts.googleapis.com/css2?family=Sora:wght@100;300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-  font-family: "Sora", sans-serif;
-}
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500&family=Poppins:wght@400;500;600&family=Sora&family=Work+Sans&display=swap");
 
-.container {
-  padding: 20px;
-  min-width: 300px;
-  box-shadow: 1px 0px 10px #eee;
-  border-radius: 30px !important;
-  border: 1px solid #fff;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-.content {
-  margin-bottom: 20px;
-  margin-top: 20px;
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.button {
-  padding: 10px;
-  border-radius: 10px;
-  border: 1px solid #100a42;
-  width: 100%;
-  display: flex;
-  background: transparent;
-  justify-content: space-between;
-  cursor: pointer;
-}
-.btn {
-  padding: 20px;
-  border: none;
-  border-radius: 10px;
-  background: #100a42;
-  width: 100%;
-  color: #fff;
-  align-items: center;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-}
-
-.btn:hover {
-  box-shadow: 1px 0px 10px #eee;
-}
-
-.span-icon {
-  display: flex;
-  flex-direction: row;
-  gap: 2px;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.span-two {
-  display: grid;
-  place-items: center;
-}
-.span-center {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-}
-
-.pointer {
-  cursor: pointer;
-}
-
-.toggle {
-  position: relative;
-}
-
-.toggle input {
-  position: absolute;
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-.toggle .onoff {
-  color: #fff;
-  font-size: 6em;
-  text-align: center;
-  display: block;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.slider {
-  position: relative;
-  display: block;
-  cursor: pointer;
-  transition: 0.4s;
-  width: 33px;
-  height: 18px;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-}
-
-.slider:before {
-  content: "";
-  position: absolute;
-  height: 17px;
-  width: 17px;
-  background-color: #fff;
-  transition: 0.4s;
-  top: 1px;
-  left: 3px;
-}
-
-input:checked + .slider {
-  background-color: #100a42;
-}
-
-input:checked + .slider:before {
-  transform: translateX(10px);
-  -ms-transform: translateX(10px);
-  transform: translateX(10px);
-}
-
-.slider.round {
-  border-radius: 20px;
-}
-.slider.round::before {
-  border-radius: 20px;
-}
+/* 
+  Note: The styles for this gradient grid background is heavily inspired by the creator of this amazing site (https://dub.sh) – all credits go to them! 
+*/
